discussion/kv_engine/168534/168534_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50266: Add common warmup stats from one function

Rather than add them separately in two.

Change-Id: I37c97d10fe56e921bb27543eda493efb3afb91ba

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-01-11 13:08:39.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-11 13:14:55.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42702/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42702/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36187/ : ABORTED

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/warmup.h:241:31:
error: unknown type name "BucketStatCollector"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36187/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36187/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15535/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15535/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4375/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17475/ : ABORTED

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17475/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17475/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24803/ : ABORTED

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24803/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24803/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14730/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1916:14: error: out-of-line definition of "addCommonStats" does not match any declaration in "Warmup" [clang-diagnostic-error]
void Warmup::addCommonStats(const BucketStatCollector& collector) const {
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.h:241:31: error: unknown type name "BucketStatCollector" [clang-diagnostic-error]
    void addCommonStats(const BucketStatCollector& collector) const;
                              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14730/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1916:14:
error: out-of-line definition of "addCommonStats" does not match any declaration in "Warmup" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14730/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13561/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13561/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4432/ : FAILURE

Compile error at [2022-01-11T13:12:33.941Z] ../kv_engine/engines/ep/src/warmup.h:241:31:
error: ?BucketStatCollector? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4432/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16682/ : FAILURE

Compile error at [2022-01-11T13:12:56.863Z] ../kv_engine/engines/ep/src/warmup.h:241:31:
error: ?BucketStatCollector? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16682/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16391/ : FAILURE

Compile error at [2022-01-11T13:12:16.685Z] ../kv_engine/engines/ep/src/warmup.h:241:31:
error: ?BucketStatCollector? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16391/ )
----------------------------------------------------------------------------------------------------------------------
